--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  background: rgb(70,70,70);
+}
+</style>
+
+<head>
+  <title>skiddlee - Homepage</title>
+</head>
+
+<body>
+  <div id="box"><img id="image" src="https://mixkit.imgix.net/static/home/free-video-templates/free-final-cut-pro-templates.png?q=80&auto=format%2Ccompress"><h3 id="title">Title</h3></div>
+</body>
