--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@ body {
   font-family: 'Montserrat', sans-serif;
   background: rgb(70,70,70);
 }
+
+box {
+  color: white;
+  border: rgb(40,40,40);
+  border-radius: 25px;
+  background: rgb(40,40,40);
+  width: 30%;
+  height: 100px;
+}
 </style>
 
 <head>
