--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@ body {
   background: rgb(40,40,40);
   width: 30%;
   height: 100px;
+  margin: 0;
+}
+
+#image {
+  width: fit;
+  height: fit;
 }
 </style>
 
